--- a/templates/hello.html
+++ b/templates/hello.html
@@ -9,14 +9,22 @@
         a {
             font-weight: bold;
             color: blue;
-            font-size: 2.0em;
+            font-size: 1.3em;
         }
     </style>
 
 </head>
 <body>
-    <a href='/hello/'>
-        Click this
-    </a>
+    <h1>
+        Hello! It's my project
+
+    </h1>
+    <p>
+        <a href='/current_date/'>
+            Current date
+
+        </a>
+    </p>
+
 </body>
 </html>
