--- a/templates/goodby.html
+++ b/templates/goodby.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        a {
-            font-weight: bold;
-            color: blue;
-            font-size: 2.0em;
-        }
-    </style>
-
 </head>
 <body>
-    <a href='/hello/'>
-        Click this
-    </a>
+    <h1>
+        Goodby user!
+    </h1>
+
 </body>
 </html>
