--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -52,8 +50,8 @@
       {% block content %}
       {% endblock %}
 
-=======
-    <meta charset="UTF-8">
+
+    {% comment %} <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
@@ -70,6 +68,6 @@
     <a href='/hello/'>
         Click this
     </a>
->>>>>>> 5cc4ba3f8366d81ac57f1c64477c59f67b462210
+
 </body>
-</html>
+</html> {% endcomment %}
