--- a/templates/category.html
+++ b/templates/category.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "index.html" %}
 
-</body>
-</html>
+{% block content %}
+
+<h1>
+    Category
+<h1>
+
+{% for i in category%}
+    <a href="#" class="btn btn-primary">{{ i.title }}</a>
+
+
+
+{% endfor %}
+
+
+{% endblock %}
