--- a/templates/product.html
+++ b/templates/product.html
@@ -13,8 +13,8 @@
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.rate }}</p>
-            {%for category in category.html.all%}
-                <a href="#" class="btn btn-primary">#{{ category.title }}</a>
+            {%for category in product.category.all%}
+              <a href="#" class="btn btn-primary">#{{ category.title }}</a>
             {% endfor %}
           <a href="#" class="btn btn-primary">More</a>
         </div>
