--- a/templates/category.html
+++ b/templates/category.html
@@ -6,12 +6,17 @@
     Category
 <h1>
 
-{% for i in category%}
-    <a href="#" class="btn btn-primary">{{ i.title }}</a>
+{% comment %} {% for i in category%}
+    <a href="#" class="btn btn-primary">{{ i.title }}</a> {% endcomment %}
 
+    <ul>
+        {% for i in category %}
+            <a href="{% url 'category_products' i.id %}"class="btn btn-primary">{{ i.title }}</a>
+        {% endfor %}
+    </ul>
 
-
-{% endfor %}
+{% comment %}
+{% endfor %} {% endcomment %}
 
 
 {% endblock %}
