--- a/templates/product.html
+++ b/templates/product.html
@@ -6,7 +6,7 @@
     Product
 <h1>
 
-
+{% comment %}
     {%for product in products%}
     <div class="card" style="width: 15rem;">
         <img src="..." class="card-img-top" alt="...">
@@ -20,7 +20,23 @@
         </div>
       </div>
 
+    {% endfor %} {% endcomment %}
+
+    {%for category in category.all%}
+      {% for product in products%}
+      <div class="card" style="width: 15rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{ product.title }}</h5>
+          <p class="card-text">{{ product.rate }}</p>
+          <a href ="#" class="btn btn-primary">Category: {{ product.category.title }}</a>
+          <a href="#" class="btn btn-primary">More</a>
+        </div>
+      </div>
+      {% endfor %}
     {% endfor %}
+
+
 
 
 {% endblock %}
