--- a/templates/product.html
+++ b/templates/product.html
@@ -6,34 +6,17 @@
     Product
 <h1>
 
-{% comment %}
     {%for product in products%}
     <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/media/{{product.image}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.rate }}</p>
-            {% for category in category.all %}
               <a href ="#" class="btn btn-primary">Category: {{ product.category.title }}</a>
-            {% endfor %}
-          <a href="#" class="btn btn-primary">More</a>
+          <a href="/product/{{ product.id }}/" class="btn btn-primary">More</a>
         </div>
       </div>
 
-    {% endfor %} {% endcomment %}
-
-    {%for category in category.all%}
-      {% for product in products%}
-      <div class="card" style="width: 15rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{ product.title }}</h5>
-          <p class="card-text">{{ product.rate }}</p>
-          <a href ="#" class="btn btn-primary">Category: {{ product.category.title }}</a>
-          <a href="#" class="btn btn-primary">More</a>
-        </div>
-      </div>
-      {% endfor %}
     {% endfor %}
 
 
