--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -6,7 +6,7 @@
 
     <h2>
 
-        <a href ="#" class="btn btn-primary">Category: {{ product.category.title }}</a>
+        <a href ="/category" class="btn btn-primary">Category: {{ product.category.title }}</a>
 
     </h2>
 
