--- a/templates/index.html
+++ b/templates/index.html
@@ -28,13 +28,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="/product">Product</a>
               </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Create
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="/create_p">Create Product</a></li>
+                  <li><a class="dropdown-item" href="/create_c">Create Category</a></li>
+                  <li><a class="dropdown-item" href="/create_r">Create Reviews</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
