--- a/templates/product.html
+++ b/templates/product.html
@@ -12,7 +12,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.rate }}</p>
-              <a href ="#" class="btn btn-primary">Category: {{ product.category.title }}</a>
+              <a href ="/category" class="btn btn-primary">Category: {{ product.category.title }}</a>
           <a href="/product/{{ product.id }}/" class="btn btn-primary">More</a>
         </div>
       </div>
