--- a/templates/create_r.html
+++ b/templates/create_r.html
@@ -5,7 +5,7 @@
 
 
 
-<h1>CREATE PRODUCT</h1>
+<h1>CREATE REVIEWS</h1>
 
 <form action="" method = "POST" enctype = "multipart/form-data">
     {% csrf_token %}
