--- a/templates/index.html
+++ b/templates/index.html
@@ -62,10 +62,10 @@
                 <a class="nav-link" href="/users/profile">Profile</a>
               </li>
             </ul>
-            <form class="d-flex">
+            {% comment %} <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> {% endcomment %}
           </div>
         </div>
       </nav>
